--- a/robert/playing-cards/index.html
+++ b/robert/playing-cards/index.html
@@ -23,13 +23,13 @@
 			linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
 			linear-gradient(30deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
 			linear-gradient(150deg, #445 12%, transparent 12.5%, transparent 87%, #445 87.5%, #445),
-			linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a), 
+			linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a),
 			linear-gradient(60deg, #99a 25%, transparent 25.5%, transparent 75%, #99a 75%, #99a);
 			background-size:80px 140px;
 			background-position: 0 0, 0 0, 40px 70px, 40px 70px, 0 0, 40px 70px;
 			/*end stolen background*/
 		}
-		
+
 		.playing-card::before,
 		.playing-card .card-front {
 			width: 200px;
@@ -50,10 +50,16 @@
 			position: relative;
 			font-size: 42px;
 			text-align: center;
-			padding: 80px 20px 20px;
+			padding: 20px;
 			box-sizing: border-box;
 			transform: rotatey(-180deg);
 			color: #444;
+			display: flex;
+			align-items: center;
+		}
+
+		.card-front span {
+			flex: 1;
 		}
 
 		.card-front[data-card^="A"],
@@ -61,35 +67,23 @@
 		.card-front[data-card^="Q"],
 		.card-front[data-card^="J"] {
 			font-size: 100px;
-			padding-top: 70px;
-		}
-
-		.card-front[data-card^="A"] {
-			padding-top: 95px;
 		}
 
 		.card-front[data-card^="2"],
 		.card-front[data-card^="3"],
 		.card-front[data-card^="4"] {
 			font-size: 60px;
-			padding-top: 80px;
-		}
-
-		.card-front[data-card^="2"] {
-			padding-top: 110px;
 		}
 
 		.card-front[data-card^="5"],
 		.card-front[data-card^="6"] {
 			font-size: 55px;
-			padding-top: 90px;
 		}
 
 		.card-front[data-card^="7"],
 		.card-front[data-card^="8"],
 		.card-front[data-card^="9"] {
 			font-size: 45px;
-			padding-top: 70px;
 		}
 
 		.playing-card.flipped::before {
@@ -130,7 +124,9 @@
 	<script id="card-template" type="text/x-handlebars">
 		{{#each this}}
 			<div class="playing-card">
-				<div class="card-front {{suit}}" data-card="{{number}} &{{suit}};">{{cardDisplay number suit}}</div>
+				<div class="card-front {{suit}}" data-card="{{number}} &{{suit}};">
+					<span>{{cardDisplay number suit}}<span>
+				</div>
 			</div>
 		{{/each}}
 	</script>
@@ -158,7 +154,7 @@
 						number = parseInt(number);
 						for(var i = 0; i < number; i++) {
 							display += '&' + suit + '; ';
-						} 
+						}
 				}
 
 				return new Handlebars.SafeString(display);
